# app/Http/Controllers/UserController.php
@@ -3,32 +3,40 @@
 namespace App\Http\Controllers;
 
 use App\DataTransferObjects\AuthDTO;
+use App\DataTransferObjects\User\ChangePasswordDTO;
 use App\DataTransferObjects\User\CreateUserDTO;
 use App\DataTransferObjects\User\ForgetPasswordDTO;
 use App\DataTransferObjects\User\ResetPasswordDTO;
+use App\DataTransferObjects\User\UpdateUserDTO;
 use App\DataTransferObjects\User\ValidateUserFieldDTO;
 use App\Http\Resources\AuthResource;
 use App\Http\Resources\EmptyResource;
 use App\Http\Resources\ErrorResource;
 use App\Http\Resources\ForgetPasswordResource;
 use App\Http\Resources\FormErrorResource;
+use App\Http\Resources\UserResource;
 use App\Services\AuthService;
 use App\Services\UserService;
 use App\Validation\Messages\ErrorEnum;
 use App\Validation\Rules\Rule;
+use App\Validation\Rules\User\ChangePassword;
 use App\Validation\Rules\User\CreateUser;
 use App\Validation\Rules\User\ForgetPassword;
 use App\Validation\Rules\User\ResetPassword;
+use App\Validation\Rules\User\UpdateUser;
 use App\Validation\Rules\User\ValidateUserEmail;
 use App\Validation\Rules\User\ValidateUserNickname;
 use App\Validation\Validation;
 use Exception;
+use Illuminate\Auth\AuthenticationException;
 use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 use Illuminate\Support\Facades\Password;
+use Spatie\RouteAttributes\Attributes\Get;
 use Spatie\RouteAttributes\Attributes\Post;
 use Spatie\RouteAttributes\Attributes\Prefix;
+use Spatie\RouteAttributes\Attributes\Put;
 use Spatie\RouteAttributes\Attributes\Where;
 use Symfony\Component\HttpFoundation\JsonResponse;
 
@@ -168,5 +176,83 @@ class UserController extends Controller
         } else {
             return new FormErrorResource($validation->getErrors());
         }
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/user",
+     *     description="Get current user",
+     *     tags={"User"},
+     *     @OA\Response(response=200, description="OK", @OA\JsonContent(ref="#/components/schemas/UserResource")),
+     *     security={{"auth_user":{}}}
+     * )
+     * @param Request $request
+     * @return JsonResource
+     */
+    #[Get('', name: 'api_user_get')]
+    public function get(Request $request): JsonResource
+    {
+        return new UserResource($this->getUser());
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/api/user",
+     *     description="Update current user",
+     *     tags={"User"},
+     *     @OA\RequestBody(@OA\JsonContent(ref="#/components/schemas/UpdateUserDTO")),
+     *     @OA\Response(response=200, description="OK", @OA\JsonContent(ref="#/components/schemas/UserResource")),
+     *     security={{"auth_user":{}}}
+     * )
+     * @param Request $request
+     * @return JsonResource
+     */
+    #[Put('', name: 'api_user_update')]
+    public function update(Request $request): JsonResource
+    {
+        $validation = new Validation(UpdateUser::rules(), Rule::messages());
+        $dto = new UpdateUserDTO($request);
+
+        return $validation->validate($dto) ?
+            new UserResource($this->userService->update($this->getUser(), $dto)) :
+            new FormErrorResource($validation->getErrors());
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/user/password/change",
+     *     description="Change restore",
+     *     tags={"User"},
+     *     @OA\RequestBody(@OA\JsonContent(ref="#/components/schemas/ChangePasswordDTO")),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(ref="#/components/schemas/AuthResource")
+     *     ),
+     *     security={{"auth_user":{}}}
+     * )
+     *
+     * @param Request $request
+     * @param AuthService $authService
+     * @return JsonResource
+     * @throws AuthenticationException|Exception
+     */
+    #[Post('password/change', name: 'api_user_password_change')]
+    public function changePassword(Request $request, AuthService $authService): JsonResource
+    {
+        $validation = new Validation(ChangePassword::rules(), ChangePassword::messages());
+        $dto = new ChangePasswordDTO($request);
+
+        if (!$validation->validate($dto)) {
+            return new FormErrorResource($validation->getErrors());
+        }
+
+        $user = $this->getUser();
+        $this->userService->changePassword($user, $dto);
+
+        $authDTO = new AuthDTO();
+        $authDTO->setData(['email' => $user->getAttribute('email'), 'password' => $dto->getNewPassword()]);
+
+        return new AuthResource($authService->auth($authDTO));
     }
 }
