# app/Http/Resources/UserResource.php
@@ -5,6 +5,18 @@ namespace App\Http\Resources;
 use App\Http\AppResponse;
 use Illuminate\Http\Request;
 
+/**
+ * @OA\Schema(
+ *     @OA\Property(property="result", type="array", @OA\Items(
+ *         @OA\Property(property="id", type="string"),
+ *         @OA\Property(property="name", type="string"),
+ *         @OA\Property(property="email", type="string"),
+ *         @OA\Property(property="nickname", type="string")
+ *     )),
+ *     @OA\Property(property="status", type="integer"),
+ *     @OA\Property(property="meta", type="object")
+ * )
+ */
 class UserResource extends Resource
 {
     /**
